--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -58,187 +58,187 @@ jobs:
           echo "version is ${{ steps.get_tag.outputs.version }} "
 
 
-  # install-dependencies:
-  #   name: Install Dependencies
-  #   runs-on: ubuntu-latest
-  #   needs: clone-tag-and-config
-  #   steps:
-  #     - name: checkout code
-  #       uses: actions/checkout@v4
+  install-dependencies:
+    name: Install Dependencies
+    runs-on: ubuntu-latest
+    needs: clone-tag-and-config
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v4
 
 
-  #     - name: install the dependencies here
-  #       run: npm install
+      - name: install the dependencies here
+        run: npm install
     
-  #     - name: Set up Snyk CLI
-  #       uses: snyk/actions/setup@806182742461562b67788a64410098c9d9b96adb
-  #       env:
-  #         SNYK_TOKEN: d9141a36-1bc7-49bb-b541-bc2a1c31b3bf
+      - name: Set up Snyk CLI
+        uses: snyk/actions/setup@806182742461562b67788a64410098c9d9b96adb
+        env:
+          SNYK_TOKEN: d9141a36-1bc7-49bb-b541-bc2a1c31b3bf
 
-  #     - name: Authenticate Snyk
-  #       run: snyk auth d9141a36-1bc7-49bb-b541-bc2a1c31b3bf
+      - name: Authenticate Snyk
+        run: snyk auth d9141a36-1bc7-49bb-b541-bc2a1c31b3bf
 
-  #     - name: scanning the dependencies
-  #       run: snyk test --file=package-lock.json
-  #       continue-on-error: true
+      - name: scanning the dependencies
+        run: snyk test --file=package-lock.json
+        continue-on-error: true
     
 
     
-  # lint:
-  #   name: Run Linter
-  #   runs-on: ubuntu-latest
-  #   needs: install-dependencies
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
+  lint:
+    name: Run Linter
+    runs-on: ubuntu-latest
+    needs: install-dependencies
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-  #     - name: install eslint 
-  #       run: npm install 
+      - name: install eslint 
+        run: npm install 
 
-  #     - name: Run application linter
-  #       # Assuming 'npm run lint' is defined in package.json
-  #       run: npm run lint
-  #       continue-on-error: true
+      - name: Run application linter
+        # Assuming 'npm run lint' is defined in package.json
+        run: npm run lint
+        continue-on-error: true
 
-  #     - name: Run hadolint
-  #       uses: hadolint/hadolint-action@master
-  #       with:
-  #         dockerfile: ./Dockerfile
-  #         format: sarif
-  #         output-file: hadolint-results.sarif
-  #         no-fail: true
+      - name: Run hadolint
+        uses: hadolint/hadolint-action@master
+        with:
+          dockerfile: ./Dockerfile
+          format: sarif
+          output-file: hadolint-results.sarif
+          no-fail: true
 
-  #     - name: Upload analysis results to GitHub
-  #       uses: github/codeql-action/upload-sarif@v3
-  #       if: always()
-  #       with:
-  #         sarif_file: hadolint-results.sarif
-  #         wait-for-processing: true
+      - name: Upload analysis results to GitHub
+        uses: github/codeql-action/upload-sarif@v3
+        if: always()
+        with:
+          sarif_file: hadolint-results.sarif
+          wait-for-processing: true
 
-  #     - name: Run Super-Linter
-  #       uses: github/super-linter@v6
-  #       env:
-  #         VALIDATE_ALL_CODEBASE: true
-  #         DEFAULT_BRANCH: main
-  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  #       continue-on-error: true 
+      - name: Run Super-Linter
+        uses: github/super-linter@v6
+        env:
+          VALIDATE_ALL_CODEBASE: true
+          DEFAULT_BRANCH: main
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        continue-on-error: true 
 
-  # secret-detect:
-  #   name: Secret Detection
-  #   runs-on: ubuntu-latest
-  #   needs: lint
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
-  #       with:
-  #         fetch-depth: 0 # Required for Gitleaks/TruffleHog to scan full history
+  secret-detect:
+    name: Secret Detection
+    runs-on: ubuntu-latest
+    needs: lint
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # Required for Gitleaks/TruffleHog to scan full history
 
-  #     - name: Setup Python for detect-secrets
-  #       uses: actions/setup-python@v4
-  #       with:
-  #         python-version: '3.10'
+      - name: Setup Python for detect-secrets
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
 
-  #     - name: Install detect-secrets
-  #       run: pip install detect-secrets
+      - name: Install detect-secrets
+        run: pip install detect-secrets
 
-  #     - name: Run detect-secrets
-  #       run: |
-  #         detect-secrets scan > .secrets.new.baseline
+      - name: Run detect-secrets
+        run: |
+          detect-secrets scan > .secrets.new.baseline
 
-  #     - name: Run TruffleHog
-  #       # Using a dedicated action is generally better for caching and maintenance
-  #       uses: edplato/trufflehog-actions-scan@master  # Or a specific version like v1.0.0
-  #       with:
-  #         path: ./
-  #         base: ${{ github.sha }} # Scan only changes from the current commit
-  #         extra_args: --only-verified
-  #       continue-on-error: true 
+      - name: Run TruffleHog
+        # Using a dedicated action is generally better for caching and maintenance
+        uses: edplato/trufflehog-actions-scan@master  # Or a specific version like v1.0.0
+        with:
+          path: ./
+          base: ${{ github.sha }} # Scan only changes from the current commit
+          extra_args: --only-verified
+        continue-on-error: true 
 
-  #     - name: Run Gitleaks
-  #       uses: gitleaks/gitleaks-action@v2
-  #       with:
-  #         args: "--verbose --redact"
+      - name: Run Gitleaks
+        uses: gitleaks/gitleaks-action@v2
+        with:
+          args: "--verbose --redact"
 
 
-  # unit-tests:
-  #   name: Run Unit Tests
-  #   runs-on: ubuntu-latest
-  #   needs: secret-detect
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
+  unit-tests:
+    name: Run Unit Tests
+    runs-on: ubuntu-latest
+    needs: secret-detect
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-  #     - name: Install Node.js dependencies (if not already cached/present)
-  #       # This is a good practice if unit-tests run in a fresh runner or parallel to install-dependencies
-  #       run: npm install 
+      - name: Install Node.js dependencies (if not already cached/present)
+        # This is a good practice if unit-tests run in a fresh runner or parallel to install-dependencies
+        run: npm install 
 
-  #     - name: Run Unit Tests
-  #       # Assuming 'npm test' is defined in package.json
-  #       run: echo "unit test happens here"
+      - name: Run Unit Tests
+        # Assuming 'npm test' is defined in package.json
+        run: echo "unit test happens here"
       
-  #     - name: code coverage report 
-  #       run: echo "code coverage happens here"
+      - name: code coverage report 
+        run: echo "code coverage happens here"
 
 
-  # sonar-scan:
-  #   name: SonarQube Static Code Analysis
-  #   runs-on: ubuntu-latest
-  #   needs: unit-tests
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
+  sonar-scan:
+    name: SonarQube Static Code Analysis
+    runs-on: ubuntu-latest
+    needs: unit-tests
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-  #     - name: Set up Java 17
-  #       uses: actions/setup-java@v3
-  #       with:
-  #        java-version: '17'
-  #        distribution: 'temurin'
+      - name: Set up Java 17
+        uses: actions/setup-java@v3
+        with:
+         java-version: '17'
+         distribution: 'temurin'
 
-  #     - name: SonarQube Scan
-  #       uses: sonarsource/sonarqube-scan-action@master
-  #       continue-on-error: true 
+      - name: SonarQube Scan
+        uses: sonarsource/sonarqube-scan-action@master
+        continue-on-error: true 
 
 
-  # build:
-  #   name: Build Application
-  #   runs-on: ubuntu-latest
-  #   needs: sonar-scan
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
+  build:
+    name: Build Application
+    runs-on: ubuntu-latest
+    needs: sonar-scan
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-  #     - name: Install Node.js dependencies (if not already cached/present)
-  #       run: npm install 
+      - name: Install Node.js dependencies (if not already cached/present)
+        run: npm install 
 
-  #     - name: Build App
-  #       run: |
-  #         CI=false npm run build
+      - name: Build App
+        run: |
+          CI=false npm run build
 
-  # tests: 
-  #   name: running the multipel tests 
-  #   runs-on: ubuntu-latest 
-  #   needs: build 
-  #   steps: 
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
+  tests: 
+    name: running the multipel tests 
+    runs-on: ubuntu-latest 
+    needs: build 
+    steps: 
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-  #     - name: Install Node.js dependencies (if needed for testing framework)
-  #       run: npm install 
+      - name: Install Node.js dependencies (if needed for testing framework)
+        run: npm install 
 
-  #     - name: mutation tests 
-  #       run: |
-  #         echo "mutation tests happens here"
-  #     - name: snapshot testing 
-  #       run: |
-  #         echo "snapshot testing happens here"
-  #     - name: component tetsting happens here 
-  #       run: |
-  #         echo "component testing happens here"
+      - name: mutation tests 
+        run: |
+          echo "mutation tests happens here"
+      - name: snapshot testing 
+        run: |
+          echo "snapshot testing happens here"
+      - name: component tetsting happens here 
+        run: |
+          echo "component testing happens here"
 
   archive:
     name: Create Archive
     runs-on: ubuntu-latest
-    needs: [clone-tag-and-config]
+    needs: [tests,clone-tag-and-config]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -345,10 +345,6 @@ jobs:
           image: ${{ env.IMAGE_TAG }}
           fail-build: true # Fail the build if the severity cutoff is met
           severity-cutoff: critical # Only critical vulnerabilities will fail the build
-        # Removed 'continue-on-error: true' here.
-        # If 'fail-build: true' is set, and critical vulnerabilities are found, this step *will* fail the workflow.
-        # If you want to log the findings but still allow the build to continue to push the image,
-        # you would re-add 'continue-on-error: true', but be aware of the security implications.
 
       - name: Upload Scan Artifacts
         uses: actions/upload-artifact@v4
@@ -364,3 +360,89 @@ jobs:
         if: success() || failure() # Upload even if previous steps failed to capture scan results
         with:
           sarif_file: ${{ steps.scan.outputs.sarif }} # Ensure this path is correct for Grype's SARIF output
+
+      # - name: Docker Login & Push
+      #   env:
+      #     IMAGE_TAG: ${{ steps.build_tag.outputs.image_tag }}
+      #   run: |
+      #     echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      #     docker push ${{ env.IMAGE_TAG }} # Use the job-level IMAGE_TAG environment variable
+  
+  deploy_to_k8: 
+    runs-on: ubuntu-latest
+    needs: [clone-tag-and-config,docker-build]
+    strategy:
+      matrix:
+        service: ${{ fromJson(needs.clone-tag-and-config.outputs.services) }} # Example JSON: [{"name": "usersvc", "port": 8080, "expectedCode": 200}]
+    env: 
+      BRANCH_NAME: ${{ github.ref_name }}
+      VERSION: ${{ needs.clone-tag-and-config.outputs.version }}
+      image_tag: ${{ needs.docker-build.outputs.image_tag }}
+      SERVICE_NAME: ${{ needs.clone-tag-and-config.outputs.service_name }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Set up Helm
+        uses: azure/setup-helm@v3
+        with:
+          version: '3.14.0'
+
+      - name: Set up kubectl
+        uses: azure/setup-kubectl@v3
+        with:
+          version: 'latest'
+
+      - name: helm upgrade or install 
+        run: |
+          helm upgrade --install ${{ env.service_name }} . \
+          -f values-${{ env.BRANCH_NAME }}.yaml \
+          --set ${{ env.service_name }}.image=${{ env.image_tag }} \
+          --namespace ${{ env.BRANCH_NAME }}
+
+      - name: check service is running or not 
+        env:
+          SERVICE_NAME: ${{ matrix.service.name }}
+          SERVICE_PORT: ${{ matrix.service.port }}
+          EXPECTED_CODE: ${{ matrix.service.expectedCode || '200' }}
+          PATH: ${{ matrix.service.path || '/' }}
+          NAMESPACE: ${{ github.ref_name }}  # Dynamic branch-based namespace
+        run: |
+          echo "🔍 Checking service health for $SERVICE_NAME in namespace $NAMESPACE"
+
+          echo "📦 Verifying rollout status..."
+          kubectl rollout status deployment/$SERVICE_NAME -n $NAMESPACE --timeout=120s
+
+          echo "🔗 Verifying service endpoints..."
+          if ! kubectl get endpoints $SERVICE_NAME -n $NAMESPACE -o jsonpath='{.subsets}' | grep -q 'addresses'; then
+              echo "❌ No ready endpoints found for service $SERVICE_NAME"
+              exit 1
+          else
+              echo "✅ Endpoints are healthy."
+          fi
+
+          echo "🚪 Port-forwarding service $SERVICE_NAME..."
+          kubectl port-forward svc/$SERVICE_NAME $SERVICE_PORT:$SERVICE_PORT -n $NAMESPACE &
+          PORT_FORWARD_PID=$!
+          sleep 5  # Let the port-forward stabilize
+
+          echo "🌐 Sending test request to http://localhost:$SERVICE_PORT$PATH"
+          responseCode=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:${SERVICE_PORT}${PATH})
+          echo "🔁 Response code: $responseCode"
+
+          if [ "$responseCode" != "$EXPECTED_CODE" ]; then
+              echo "❌ Expected $EXPECTED_CODE but got $responseCode"
+              kill $PORT_FORWARD_PID || true
+              exit 1
+          else
+              echo "✅ Service $SERVICE_NAME returned expected HTTP $EXPECTED_CODE"
+          fi
+
+          echo "🛑 Cleaning up port-forward"
+          kill $PORT_FORWARD_PID || true
+      
+
+
+          
+      
+
+
