--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -73,10 +73,10 @@ jobs:
       - name: Set up Snyk CLI
         uses: snyk/actions/setup@806182742461562b67788a64410098c9d9b96adb
         env:
-          SNYK_TOKEN: d9141a36-1bc7-49bb-b541-bc2a1c31b3bf
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
       - name: Authenticate Snyk
-        run: snyk auth d9141a36-1bc7-49bb-b541-bc2a1c31b3bf
+        run: snyk auth ${{ secrets.SNYK_TOKEN }}
 
       - name: scanning the dependencies
         run: snyk test --file=package-lock.json
@@ -362,88 +362,9 @@ jobs:
         with:
           sarif_file: ${{ steps.scan.outputs.sarif }} # Ensure this path is correct for Grype's SARIF output
 
-      # - name: Docker Login & Push
-      #   env:
-      #     IMAGE_TAG: ${{ steps.build_tag.outputs.image_tag }}
-      #   run: |
-      #     echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-      #     docker push ${{ env.IMAGE_TAG }} # Use the job-level IMAGE_TAG environment variable
-  
-  deploy_to_k8: 
-    runs-on: ubuntu-latest
-    needs: [clone-tag-and-config,docker-build]
-    strategy:
-      matrix:
-        service: ${{ fromJson(needs.clone-tag-and-config.outputs.services) }} # Example JSON: [{"name": "usersvc", "port": 8080, "expectedCode": 200}]
-    env: 
-      BRANCH_NAME: ${{ github.ref_name }}
-      VERSION: ${{ needs.clone-tag-and-config.outputs.version }}
-      image_tag: ${{ needs.docker-build.outputs.image_tag }}
-      SERVICE_NAME: ${{ needs.clone-tag-and-config.outputs.service_name }}
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      - name: Set up Helm
-        uses: azure/setup-helm@v3
-        with:
-          version: '3.14.0'
-
-      - name: Set up kubectl
-        uses: azure/setup-kubectl@v3
-        with:
-          version: 'latest'
-
-      - name: helm upgrade or install 
-        run: |
-          helm upgrade --install ${{ env.service_name }} . \
-          -f values-${{ env.BRANCH_NAME }}.yaml \
-          --set ${{ env.service_name }}.image=${{ env.image_tag }} \
-          --namespace ${{ env.BRANCH_NAME }}
-
-      - name: check service is running or not 
+      - name: Docker Login & Push
         env:
-          SERVICE_NAME: ${{ matrix.service.name }}
-          SERVICE_PORT: ${{ matrix.service.port }}
-          EXPECTED_CODE: ${{ matrix.service.expectedCode || '200' }}
-          PATH: ${{ matrix.service.path || '/' }}
-          NAMESPACE: ${{ github.ref_name }}  # Dynamic branch-based namespace
+          IMAGE_TAG: ${{ steps.build_tag.outputs.image_tag }}
         run: |
-          echo "🔍 Checking service health for $SERVICE_NAME in namespace $NAMESPACE"
-
-          echo "📦 Verifying rollout status..."
-          kubectl rollout status deployment/$SERVICE_NAME -n $NAMESPACE --timeout=120s
-
-          echo "🔗 Verifying service endpoints..."
-          if ! kubectl get endpoints $SERVICE_NAME -n $NAMESPACE -o jsonpath='{.subsets}' | grep -q 'addresses'; then
-              echo "❌ No ready endpoints found for service $SERVICE_NAME"
-              exit 1
-          else
-              echo "✅ Endpoints are healthy."
-          fi
-
-          echo "🚪 Port-forwarding service $SERVICE_NAME..."
-          kubectl port-forward svc/$SERVICE_NAME $SERVICE_PORT:$SERVICE_PORT -n $NAMESPACE &
-          PORT_FORWARD_PID=$!
-          sleep 5  # Let the port-forward stabilize
-
-          echo "🌐 Sending test request to http://localhost:$SERVICE_PORT$PATH"
-          responseCode=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:${SERVICE_PORT}${PATH})
-          echo "🔁 Response code: $responseCode"
-
-          if [ "$responseCode" != "$EXPECTED_CODE" ]; then
-              echo "❌ Expected $EXPECTED_CODE but got $responseCode"
-              kill $PORT_FORWARD_PID || true
-              exit 1
-          else
-              echo "✅ Service $SERVICE_NAME returned expected HTTP $EXPECTED_CODE"
-          fi
-
-          echo "🛑 Cleaning up port-forward"
-          kill $PORT_FORWARD_PID || true
-      
-
-
-          
-      
-
-
+          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+          docker push ${{ env.IMAGE_TAG }} # Use the job-level IMAGE_TAG environment variable
